aws/k8s/prod/url-overlay.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
spec:
  template:
    spec:
      containers:
      - name: api
        livenessProbe:
          httpGet:
            httpHeaders:
              - name: Host
                value: www.mudroom.rip
        readinessProbe:
          httpGet:
            httpHeaders:
              - name: Host
                value: www.mudroom.rip
