aws/k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "4m"
    cert-manager.io/cluster-issuer: "letsencrypt"
    cert-manager.io/common-name: "mudroom.rip"
    cert-manager.io/renew-before: 480h
spec:
  tls:
  - hosts:
      - mudroom.rip
      - www.mudroom.rip
    secretName: mudroom-prod-tls
  rules:
  - host: www.mudroom.rip
    http:
      paths:
      - backend:
          service:
            name: app-clusterip
            port:
              number: 8080
        path: /
        pathType: "Prefix"
---
# Apex redirect
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-forwarder
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/ingress.global-static-ip-name: "mudroom-com"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400s"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/client-max-body-size: "100m"
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.mudroom.rip
spec:
  tls:
  - hosts:
      - mudroom.rip
    secretName: mudroom-prod-tls
  rules:
  - host: mudroom.rip
